[Chore] fixed gitignore path

--- a/.gitignore
+++ b/.gitignore
@@ -71,4 +71,4 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
-/[Aa]ssets/[Ss]cripts/[Tt]ools/
+/[Aa]ssets/[Gg]aia/[Ss]cripts/[Tt]ools/
